# ops

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: android.yml  cmake-multi-platform.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
src/: common.h  data.c  data.h  databuffer.h  heap.h  obj.c  obj.h  opc.c  ops.c
src/common/: common.h  databuffer.c  obj.c  sds.c  sds.h
src/module/: dst.h  forward.h  vpc.h
src/opc/: bridge.c  bridge.h  opc.c  opc.h
src/opc/module/: dst.c  dst.h  forward.c  forward.h  vpc.c  vpc.h
src/ops/: bridge.c  bridge.h  data.c  data.h  http.c  http.h  ops.c  ops.h  public.c  public.h  web.c  web.h
src/ops/module/: dst.c  dst.h  forward.c  forward.h  vpc.c  vpc.h
web/: index.html
web/layui/css/: layui.css
win/: ops.sln
win/opc/: opc.vcxproj  opc.vcxproj.filters
win/ops/: ops.vcxproj  ops.vcxproj.filters
